--- a/Membres.html
+++ b/Membres.html
@@ -4,7 +4,7 @@
         <link href="Membres.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
         <meta charset="utf-8">
-        
+        <script src="Membres.js" defer></script>
         <title>Lab'ISEN</title>
     </head>
 
