--- a/head_footer.html
+++ b/head_footer.html
@@ -5,6 +5,7 @@
         <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="head_footer.js" defer></script>
         <title>Lab'ISEN</title>
     </head>
             
