--- a/plateformes_tech.html
+++ b/plateformes_tech.html
@@ -5,6 +5,7 @@
         <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="plateformes_tech.js" defer></script>
         <title>Lab'ISEN</title>
     </head>
 
