Travail en cours sur la nouvelle barre de menu

--- a/accueil.html
+++ b/accueil.html
@@ -6,11 +6,38 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="accueil.js" defer></script>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet"> <!-- importe les icônes -->
         <title>Lab'ISEN</title>
     </head>
             
 
     <header>
+        <a id="labisenlogo" href="Accueil.html"><img src="Images_H/LabISEN.png" href="Accueil.html" alt="LabISEN" id="header-img" width="170px"height="70px"></a>
+        <nobr><a class="nav-link" href="Accueil.html"><span class="material-icons">home</span> Accueil</a></nobr>
+        <nobr>
+            <div class="dropdown">
+                <button class="dropbtn">Recherche<span class="material-icons">expand_more</span></button>
+                <div class="dropdown-content">
+                    <a href="Recherche.html#thematiques"><span class="material-icons">biotech</span> Thématiques de Recherche</a>
+                    <a href="Recherche.html#plateformes"><span class="material-icons">domain</span> Plateformes Technologique</a>
+                </div>
+            </div> 
+        </nobr>
+        <nobr><a href="Membres.html"><span class="material-icons">people</span> Membres</a></nobr>
+        <nobr><a href="Projets.html"><span class="material-icons">list_alt</span> Projets</a></nobr>
+        <nobr><a href="Publications.html"><span class="material-icons">feed</span> Publication</a></nobr>
+        <nobr><a href="Partenaires.html"><span class="material-icons">handshake</span> Partenaires</a></nobr>   
+        <nobr>
+            <div class="dropdown">
+                <button class="dropbtn">Contact<span class="material-icons">expand_more</span></button>
+                <div class="dropdown-content">
+                    <a href="Infos_et_contact.html#contact"><span class="material-icons">contact_mail</span> Contactez-Nous</a>
+                    <a href="Infos_et_contact.html#map"><span class="material-icons">map</span> Plan d'accès</a>
+                    <a href="offresdemploi.html"><span class="material-icons">work_outline</span> Offres d'emploi</a>
+                </div>
+            </div>
+        </nobr>
+        <!--
         <div class="element">
             <div id="bloc"><a href="accueil.html" target="_blank"><img class="img_acc" src="Images_H/LabISEN.png"></a></div>
             <nav>
@@ -40,6 +67,7 @@
                 </hcontact>
               </nav>                   
         </div>
+    -->
     </header>
 
 
