--- a/accueil.html
+++ b/accueil.html
@@ -12,7 +12,7 @@
             
 
     <header>
-        <a id="labisenlogo" href="Accueil.html"><img src="Images_H/LabISEN.png" href="Accueil.html" alt="LabISEN" id="header-img" width="170px"height="70px"></a>
+        <a id="labisenlogo" class="img_acc" href="Accueil.html"><img src="Images_H/LabISEN.png" href="Accueil.html" alt="LabISEN" id="header-img" width="170px"height="70px"></a>
         <nobr><a class="nav-link" href="Accueil.html"><span class="material-icons">home</span> Accueil</a></nobr>
         <nobr>
             <div class="dropdown">
