Ajout de l'icône sur l'onglet

--- a/Membres.html
+++ b/Membres.html
@@ -5,6 +5,7 @@
         <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
         <meta charset="utf-8">
         <script src="Membres.js" defer></script>
+        <link rel = "icon" href ="images/pagelogo.png"type = "image/x-icon"> <!-- icône de l'onglet de la page -->
         <title>Lab'ISEN</title>
     </head>
 
