--- a/contactez_nous.html
+++ b/contactez_nous.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="contactez-nous.js" defer></script>
+        <link rel = "icon" href ="images/pagelogo.png"type = "image/x-icon"> <!-- icône de l'onglet de la page -->
         <title>Lab'ISEN</title>
     </head>
 
