Barre de menu opérationnelle

--- a/accueil.html
+++ b/accueil.html
@@ -19,8 +19,8 @@
             <div class="dropdown">
                 <button class="dropbtn">Recherche<span class="material-icons">expand_more</span></button>
                 <div class="dropdown-content">
-                    <a href="Recherche.html#thematiques"><span class="material-icons">biotech</span> Thématiques de Recherche</a>
-                    <a href="Recherche.html#plateformes"><span class="material-icons">domain</span> Plateformes Technologique</a>
+                    <a href="Nos_axes.html"><span class="material-icons">biotech</span> Thématiques de Recherche</a>
+                    <a href="plateformes_tech.html"><span class="material-icons">domain</span> Plateformes Technologique</a>
                 </div>
             </div> 
         </nobr>
@@ -32,9 +32,9 @@
             <div class="dropdown">
                 <button class="dropbtn">Contact<span class="material-icons">expand_more</span></button>
                 <div class="dropdown-content">
-                    <a href="Infos_et_contact.html#contact"><span class="material-icons">contact_mail</span> Contactez-Nous</a>
-                    <a href="Infos_et_contact.html#map"><span class="material-icons">map</span> Plan d'accès</a>
-                    <a href="offresdemploi.html"><span class="material-icons">work_outline</span> Offres d'emploi</a>
+                    <a href="contactez_nous.html"><span class="material-icons">contact_mail</span> Contactez-Nous</a>
+                    <a href="plan_daccès.html"><span class="material-icons">map</span> Plan d'accès</a>
+                    <a href="offre_demploi.html"><span class="material-icons">work_outline</span> Offres d'emploi</a>
                 </div>
             </div>
         </nobr>
