Implémentation de l'horloge dans la barre de menu

--- a/accueil.html
+++ b/accueil.html
@@ -6,14 +6,16 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="accueil.js" defer></script>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet"> <!-- importe les icônes -->
-        <link rel = "icon" href ="images/pagelogo.png"type = "image/x-icon"> <!-- icône de l'onglet de la page -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet"> <!-- importe les icônes du navbar -->
+        <link rel = "icon" href ="images/pagelogo.png"type = "image/x-icon"> <!-- logo de l'onglet de la page -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- l'horloge -->
         <title>Lab'ISEN</title>
     </head>
             
 
     <header>
         <a id="labisenlogo" class="img_acc" href="Accueil.html"><img src="Images_H/LabISEN.png" href="Accueil.html" alt="LabISEN" id="header-img" width="170px"height="70px"></a>
+        <div id="clock">0:0:00</div>
         <nobr><a class="nav-link" href="Accueil.html"><span class="material-icons">home</span> Accueil</a></nobr>
         <nobr>
             <div class="dropdown">
@@ -38,6 +40,7 @@
                 </div>
             </div>
         </nobr>
+        
         <!--
         <div class="element">
             <div id="bloc"><a href="accueil.html" target="_blank"><img class="img_acc" src="Images_H/LabISEN.png"></a></div>
