loader sur offre_demploi

--- a/offre_demploi.html
+++ b/offre_demploi.html
@@ -42,7 +42,7 @@
         </div>
     </header>
 
-    <body>
+    <body id="body">
         <div id="deroulant">
             <nav class="boxing">
                 <section class="rech_menu" class="deroulant1">
