--- a/offre_demploi.html
+++ b/offre_demploi.html
@@ -41,7 +41,7 @@
               </nav>                   
         </div>
     </header>
-
+    <div id="load"></div>
     <body id="body">
         <div id="deroulant">
             <nav class="boxing">
