Préparation de l'ajout de la barre de menu à toutes les pages

--- a/accueil.html
+++ b/accueil.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
+        <link href="navbar/navbar.css" rel="stylesheet">
         <link href="accueil.CSS" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
         <meta charset="utf-8">
