--- a/Membres.html
+++ b/Membres.html
@@ -6,7 +6,9 @@
         <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
         <meta charset="utf-8">
         <script src="Membres.js" defer></script>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet"> <!-- importe les icônes du navbar -->
         <link rel = "icon" href ="images/pagelogo.png"type = "image/x-icon"> <!-- icône de l'onglet de la page -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- l'horloge -->
         <title>Lab'ISEN</title>
     </head>
 
