--- a/Nos_axes.html
+++ b/Nos_axes.html
@@ -7,7 +7,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="Nos_axes.js" defer></script>
-        <link rel = "icon" href ="images/pagelogo.png"type = "image/x-icon"> <!-- icône de l'onglet de la page -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet"> <!-- importe les icônes du navbar -->
+        <link rel = "icon" href ="images/pagelogo.png"type = "image/x-icon"> <!-- logo de l'onglet de la page -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- l'horloge -->
         <title>Lab'ISEN</title>
     </head>
 
