Implémentation du JS dans toutes les pages + renommage de "projet" en "projets" parce que c'est la meilleure solution à ce point

--- a/contactez_nous.html
+++ b/contactez_nous.html
@@ -5,6 +5,7 @@
         <link href="contactez_nous.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
         <meta charset="utf-8">
+        <script src="navbar/navbar.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="contactez-nous.js" defer></script>
         <link rel = "icon" href ="images/pagelogo.png"type = "image/x-icon"> <!-- icône de l'onglet de la page -->
