--- a/Membres.html
+++ b/Membres.html
@@ -5,6 +5,7 @@
         <link href="Membres.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
         <meta charset="utf-8">
+        <script src="navbar/navbar.js" defer></script>
         <script src="Membres.js" defer></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet"> <!-- importe les icônes du navbar -->
         <link rel = "icon" href ="images/pagelogo.png"type = "image/x-icon"> <!-- icône de l'onglet de la page -->
