--- a/head_footer.html
+++ b/head_footer.html
@@ -5,6 +5,7 @@
         <link href="head_footer.CSS" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
         <meta charset="utf-8">
+        <script src="navbar/navbar.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="head_footer.js" defer></script>
         <link rel = "icon" href ="images/pagelogo.png"type = "image/x-icon"> <!-- icône de l'onglet de la page -->
