--- a/offre_demploi.html
+++ b/offre_demploi.html
@@ -6,6 +6,7 @@
         <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="navbar/navbar.js" defer></script>
         <script src="offre_demploi.js" defer></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet"> <!-- importe les icônes du navbar -->
         <link rel = "icon" href ="images/pagelogo.png"type = "image/x-icon"> <!-- logo de l'onglet de la page -->
