patch mineur sur la page "contactez nous"

--- a/contactez_nous.html
+++ b/contactez_nous.html
@@ -8,7 +8,9 @@
         <script src="navbar/navbar.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="contactez-nous.js" defer></script>
-        <link rel = "icon" href ="images/pagelogo.png"type = "image/x-icon"> <!-- icône de l'onglet de la page -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet"> <!-- importe les icônes du navbar -->
+        <link rel = "icon" href ="images/pagelogo.png"type = "image/x-icon"> <!-- logo de l'onglet de la page -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- l'horloge -->
         <title>Lab'ISEN</title>
     </head>
 
