Les pages sélectionnées sont maintenant blanches

--- a/Projets.html
+++ b/Projets.html
@@ -28,7 +28,7 @@
             </div> 
         </nobr>
         <nobr><a onclick="members_click()"><span class="material-icons">people</span> Membres</a></nobr>
-        <nobr><a href="Projets.html"><span class="material-icons">list_alt</span> Projets</a></nobr>
+        <nobr id="selected_page"><a href="Projets.html"><span class="material-icons">list_alt</span> Projets</a></nobr>
         <nobr><a href="Publications.html"><span class="material-icons">feed</span> Publication</a></nobr>
         <nobr><a href="Partenaires.html"><span class="material-icons">handshake</span> Partenaires</a></nobr>   
         <nobr>
