--- a/contactez_nous.html
+++ b/contactez_nous.html
@@ -31,7 +31,7 @@
         <nobr><a href="Projets.html"><span class="material-icons">list_alt</span> Projets</a></nobr>
         <nobr><a href="Publications.html"><span class="material-icons">feed</span> Publication</a></nobr>
         <nobr><a href="Partenaires.html"><span class="material-icons">handshake</span> Partenaires</a></nobr>   
-        <nobr>
+        <nobr id="selected_page">
             <div class="dropdown">
                 <button class="dropbtn">Contact<span class="material-icons">expand_more</span></button>
                 <div class="dropdown-content">
