--- a/Partenaires.html
+++ b/Partenaires.html
@@ -30,7 +30,7 @@
         <nobr><a onclick="members_click()"><span class="material-icons">people</span> Membres</a></nobr>
         <nobr><a href="Projets.html"><span class="material-icons">list_alt</span> Projets</a></nobr>
         <nobr><a href="Publications.html"><span class="material-icons">feed</span> Publication</a></nobr>
-        <nobr><a href="Partenaires.html"><span class="material-icons">handshake</span> Partenaires</a></nobr>   
+        <nobr id="selected_page"><a href="Partenaires.html"><span class="material-icons">handshake</span> Partenaires</a></nobr>   
         <nobr>
             <div class="dropdown">
                 <button class="dropbtn">Contact<span class="material-icons">expand_more</span></button>
