--- a/accueil.html
+++ b/accueil.html
@@ -17,7 +17,7 @@
     <header>
         <a id="labisenlogo" class="img_acc" href="Accueil.html"><img src="Images_H/LabISEN.png" href="Accueil.html" alt="LabISEN" id="header-img" width="170px"height="70px"></a>
         <div id="clock">0:0:00</div>
-        <nobr><a class="nav-link" href="Accueil.html"><span class="material-icons">home</span> Accueil</a></nobr>
+        <nobr id="selected_page"><a class="nav-link" href="Accueil.html"><span class="material-icons">home</span> Accueil</a></nobr>
         <nobr>
             <div class="dropdown">
                 <button class="dropbtn">Recherche<span class="material-icons">expand_more</span></button>
