--- a/contactez_nous.html
+++ b/contactez_nous.html
@@ -17,8 +17,8 @@
     <header>
         <a id="labisenlogo" class="img_acc" href="Accueil.html"><img src="Images_H/LabISEN.png" href="Accueil.html" alt="LabISEN" id="header-img" width="170px"height="70px"></a>
         <div id="clock">0:0:00</div>
-        <nobr><a class="nav-link" href="Accueil.html"><span class="material-icons">home</span> Accueil</a></nobr>
-        <nobr>
+        <nobr onmouseover="button_hover()"><a class="nav-link" href="Accueil.html"><span class="material-icons">home</span> Accueil</a></nobr>
+        <nobr onmouseover="button_hover()">
             <div class="dropdown">
                 <button class="dropbtn">Recherche<span class="material-icons">expand_more</span></button>
                 <div class="dropdown-content">
@@ -27,11 +27,11 @@
                 </div>
             </div> 
         </nobr>
-        <nobr><a onclick="members_click()"><span class="material-icons">people</span> Membres</a></nobr>
-        <nobr><a href="Projets.html"><span class="material-icons">list_alt</span> Projets</a></nobr>
-        <nobr><a href="Publications.html"><span class="material-icons">feed</span> Publication</a></nobr>
-        <nobr><a href="Partenaires.html"><span class="material-icons">handshake</span> Partenaires</a></nobr>   
-        <nobr id="selected_page">
+        <nobr onmouseover="button_hover()"><a onclick="members_click()"><span class="material-icons">people</span> Membres</a></nobr>
+        <nobr onmouseover="button_hover()"><a href="Projets.html"><span class="material-icons">list_alt</span> Projets</a></nobr>
+        <nobr onmouseover="button_hover()"><a href="Publications.html"><span class="material-icons">feed</span> Publication</a></nobr>
+        <nobr onmouseover="button_hover()"><a href="Partenaires.html"><span class="material-icons">handshake</span> Partenaires</a></nobr>   
+        <nobr onmouseover="button_hover()" id="selected_page">
             <div class="dropdown">
                 <button class="dropbtn">Contact<span class="material-icons">expand_more</span></button>
                 <div class="dropdown-content">
