--- a/Projets.html
+++ b/Projets.html
@@ -2,12 +2,12 @@
 <html lang="fr">
     <head>
         <link href="navbar/navbar.css" rel="stylesheet">
-        <link href="Projet.css" rel="stylesheet">
+        <link href="Projets.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="navbar/navbar.js" defer></script>
-        <script src="Projet.js" defer></script>
+        <script src="Projets.js" defer></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet"> <!-- importe les icônes du navbar -->
         <link rel = "icon" href ="images/pagelogo.png"type = "image/x-icon"> <!-- logo de l'onglet de la page -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- l'horloge -->
