Ajout du loader chips sur toutes les pages  (désactivable)

--- a/contactez_nous.html
+++ b/contactez_nous.html
@@ -43,7 +43,9 @@
         </nobr>
     </header>
 
-    <body>        
+    <body>
+        <div id="loader_gif"></div>
+        <div id="loader_background"></div>
         <main>
             <br>
             <br>            <br>
