--- a/Membres.html
+++ b/Membres.html
@@ -42,7 +42,9 @@
         </nobr>
     </header>
 
-    <body>        
+    <body>
+        <div id="loader_gif"></div>
+        <div id="loader_background"></div>
         <main>
             <br>
             <br>            <br>
