--- a/Partenaires.html
+++ b/Partenaires.html
@@ -44,6 +44,8 @@
     </header>
 
     <body>
+        <div id="loader_gif"></div>
+        <div id="loader_background"></div>
         <main>
             <br>
             <br>            <br>
