--- a/accueil.html
+++ b/accueil.html
@@ -27,7 +27,7 @@
                 </div>
             </div> 
         </nobr>
-        <nobr onmouseover="button_hover()"><a onclick="members_click()"><span class="material-icons">people</span> Membres</a></nobr>
+        <nobr onmouseover="button_hover()"><a onclick="members_click('mem_test')"><span class="material-icons">people</span> Membres</a></nobr>
         <nobr onmouseover="button_hover()"><a href="Projets.html"><span class="material-icons">list_alt</span> Projets</a></nobr>
         <nobr onmouseover="button_hover()"><a href="Publications.html"><span class="material-icons">feed</span> Publication</a></nobr>
         <nobr onmouseover="button_hover()"><a href="Partenaires.html"><span class="material-icons">handshake</span> Partenaires</a></nobr>   
@@ -46,6 +46,7 @@
 
     <body>
         <div id="loader_gif"></div>
+        <div id="loader_background"></div>
         <main>
             <br>
             <br>
