--- a/offre_demploi.html
+++ b/offre_demploi.html
@@ -43,7 +43,9 @@
         </nobr>
     </header>
     <div id="load"></div>
-    <body id="body">        
+    <body id="body">
+        <div id="loader_gif"></div>
+        <div id="loader_background"></div>
         <main>
             <br>
             <br>            <br>
