Travail en cours sur la photo à gratter de la page de membres

--- a/Membres.html
+++ b/Membres.html
@@ -53,6 +53,7 @@
             <layout>    
                 <div class="cartes" id="carte_ayoub">
                     <section id="im_ayoub">
+                        <canvas src="Im_membres/grattage.jpg" alt="grattez" id="image_grattage"></canvas>
                         <img src="Im_membres/ayoub.jpeg" alt="Ayoub" id="image_ayoub">
                     </section>
                     <section class="info_box">
