--- a/Nos_axes.html
+++ b/Nos_axes.html
@@ -17,7 +17,7 @@
     <header>
         <a id="labisenlogo" class="img_acc" href="Accueil.html"><img src="Images_H/LabISEN.png" href="Accueil.html" alt="LabISEN" id="header-img" width="170px"height="70px"></a>
         <div id="clock">0:0:00</div>
-        <nobr onmouseover="button_hover()"><a class="nav-link" href="Accueil.html"><span class="material-icons">home</span> Accueil</a></nobr>
+        <nobr onmouseover="button_hover()" onclick="button_click('Accueil.html')"><a class="nav-link"><span class="material-icons">home</span> Accueil</a></nobr>
         <nobr onmouseover="button_hover()" id="selected_page">
             <div class="dropdown">
                 <button class="dropbtn">Recherche<span class="material-icons">expand_more</span></button>
