--- a/contactez_nous.html
+++ b/contactez_nous.html
@@ -52,7 +52,7 @@
             <br>
             <h1><b>Contactez le responsable de l'équipe</b></h1>
             <h2><b>(Maher Jridi - maher.jridi[at]isen-ouest.yncrea.fr)</b></h2>
-            <form action="contactez_nous.html" method="post">
+            <form id="FomulaireContact" action="contactez_nous.html" method="post">
                 <input type="text" name="prenom_nom" placeholder="Prénom Nom:" oninput="verif_nom()">
                 <br><div name="mand_nom" class="mandatory_rem">*Entrez votre prénom et votre nom</div>
                 <br>
