plateformes_tech-Modals

--- a/plateformes_tech.html
+++ b/plateformes_tech.html
@@ -91,7 +91,7 @@
             <br>
             <hr color="black" width= 90%>
             <br>
-            <section>
+            <section id="openModal2">
                 <dl>
                     <dt class="title"><b>Environnement hybrides connectés</b></dt>
                     <div class="decalage">
@@ -102,6 +102,22 @@
                     </div>
                 </dl>
             </section>
+            <div id="modal2" class="modal">
+            <div class="modal-content">
+                <span id="closeModal2" class="close">&times;</span>
+                <section>
+                <dl>
+                    <dt class="title"><b>Environnement hybrides connectés</b></dt><br>
+                    <div class="decalage">
+                    <img src="Im_recherches/env_connecte.jpg">
+                    <dd>
+                        <p class="texte">Cette plateforme est en cours de développement et vise à offrir des services à la personne dans des environnements indoor (bureau connecté, école conn...</p>
+                    </dd>
+                    </div>
+                </dl>
+                </section>
+            </div>
+            </div>
             <br>
             <hr color="black" width= 90%>
             <br>
