flèche vers le haut

--- a/Projets.html
+++ b/Projets.html
@@ -111,6 +111,7 @@
         <hr color="black" width= 95%>
         <br>
         </main>
+        <img src="Im_projets/fleche_haut_violet.png" href="Projets.html#header" id="fleche">
     </body>
 
     <footer>
