Ajout en cours de la sonnerie

--- a/accueil.html
+++ b/accueil.html
@@ -81,25 +81,25 @@
     <footer>
         <div_Nantes>
             <h3>Nantes</h3>
-            <p_1><a href="tel:+33 02 30 13 05 60" class="num">02 30 13 05 60</a></p_1><br>
+            <p_1><a href="tel:+33 02 30 13 05 60" oncopy="ask_phone('02 30 13 05 60')" class="num">02 30 13 05 60</a></p_1><br>
             <p_2>33 Quater Avenue du<br>Champ de Manœuvres</p_2>
         </div_Nantes>
 
         <div_Caen>
             <h3>Caen</h3>
-            <p_1><a href="tel:+33 02 30 31 03 20" class="num">02 30 31 03 20</a></p_1><br>
+            <p_1><a href="tel:+33 02 30 31 03 20" oncopy="ask_phone('02 30 31 03 20')" class="num">02 30 31 03 20</a></p_1><br>
             <p_2>8 Boulevard Croix Guérin</p_2>
         </div_Caen>
 
         <div_Brest>
             <h3>Brest</h3>
-            <p_1><a href="tel:+33 02 98 03 84 00" class="num">02 98 03 84 00</a></p_1><br>
+            <p_1><a href="tel:+33 02 98 03 84 00" oncopy="ask_phone('02 98 03 84 00')" class="num">02 98 03 84 00</a></p_1><br>
             <p_2>20 rue Cuirassé Bretagne</p_2>
         </div_Brest>
 
         <div_Rennes>
             <h3>Rennes</h3>
-            <p_1><a href="tel:+33 02 30 13 02 50" class="num">02 30 13 02 50</a></p_1><br>
+            <p_1><a href="tel:+33 02 30 13 02 50" oncopy="ask_phone('02 30 13 02 50')" class="num">02 30 13 02 50</a></p_1><br>
             <p_2>2 rue de la Châtaigneraie</p_2>
         </div_Rennes>
 
@@ -111,13 +111,13 @@
             </span>
             
             <span id="sous_flex">
-                <p_3>Amaury A.</p_3>
                 <a href="https://www.linkedin.com/in/amaury-77545725a/" target="_blank"><img class="lien_linkedin_Am" src="Images_H/linkedin.svg"></a>
+                <p_3 id="barre_vert">Amaury A.</p_3>
             </span>
 
             <span id="sous_flex">
-                <p_3>Achille W.</p_3>
                 <a href="https://www.linkedin.com" target="_blank"><img class="lien_linkedin_Am" src="Images_H/linkedin.svg"></a>
+                <p_3>Achille W.</p_3>
             </span>
         </div>
     </footer>
