--- a/accueil.html
+++ b/accueil.html
@@ -7,6 +7,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="navbar/navbar.js" defer></script>
+        <script src="accueil.js" defer></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet"> <!-- importe les icônes du navbar -->
         <link rel = "icon" href ="images/pagelogo.png"type = "image/x-icon"> <!-- logo de l'onglet de la page -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- l'horloge -->
@@ -53,7 +54,7 @@
             <br>
             <br>
             <dl>
-                <dt><h1 id="desc"><u>Description</u> :</h1></dt>
+                <dt><h1 id="desc"><u>Qui sommes-nous ?</u> :</h1></dt>
                 <dd>L'équipe « Vision et Analyse de Données » est une équipe du laboratoire 
                 L@bISEN de l'ISEN Yncréa Ouest. L'équipe mène une activité de R&D pour la conception 
                 de plateformes technologiques d'observations et d'analyses à partir de réseaux de capteurs 
@@ -62,7 +63,7 @@
             <br>
             <div id="button1"><center><a href="Nos_axes.html" target="_blank">Nos axes de Recherches</a></center></div>
             <br>
-            <center><img src="Im_accueil/competences.jpg" id="competence"></center>
+           <center><img src="Im_accueil/competences.jpg" id="competence" ><div id="zoom"></div></center>
             <br>
 
             <h1 id="actu"><u>Actualités</u> :</h1>
