--- a/accueil.html
+++ b/accueil.html
@@ -54,7 +54,9 @@
             <br>
             <br>
             <dl>
-                <dt><h1 id="desc"><u>Qui sommes-nous ?</u> :</h1></dt>
+                <dt><div id="head2">
+                    <p id="desc">Qui sommes-nous ? :</p>
+                </div></dt>
                 <dd>L'équipe « Vision et Analyse de Données » est une équipe du laboratoire 
                 L@bISEN de l'ISEN Yncréa Ouest. L'équipe mène une activité de R&D pour la conception 
                 de plateformes technologiques d'observations et d'analyses à partir de réseaux de capteurs 
