Faute de frappe projet

--- a/Projets.html
+++ b/Projets.html
@@ -51,7 +51,7 @@
             <br>
             <br>        <br>
         <br>
-        <h1><b>Projet en cours</b></h1>
+        <h1><b>Projets en cours</b></h1>
         <hr>
         <section>
             <h2 class="title">CASTEL : accompagnement dans la transformation digitale</h2>
