Progrès sur le mode édition

--- a/Membres.html
+++ b/Membres.html
@@ -87,6 +87,7 @@
                             <font class="tag" style="vertical-align: inherit;">Computer vision</font><br>
                             <br>
                         </div>
+                        <button class="deleteButton">supprimer</button>
                     </section>
                 </div>
                 <br>
@@ -114,6 +115,7 @@
                             <font class="tag" style="vertical-align: inherit;">Algorithm-Architecture Co-desing</font><br>
                             <br>
                         </div>
+                        <button class="deleteButton">supprimer</button>
                     </section>
                 </div>
                 
@@ -126,6 +128,7 @@
                 <section>
                     <h2>Sylvain Lefebvre</h2>
                     <p>Période :01/2022 au 04/2023<br>Projet : Industrie 4.0<br><br>ISEN Yncréa Ouest –Nantes<br>sylvain.lefebvre[at]isen-ouest.yncrea.fr</p>
+                    <button class="deleteButton">supprimer</button>
                 </section>
             </div>
             <br>
@@ -136,6 +139,7 @@
                 <section>
                     <h2>Salima Bourbia</h2>
                     <p>Période :01/2022 au 04/2023<br>Projet : Industrie 4.0<br><br>ISEN Yncréa Ouest –Nantes<br>sylvain.lefebvre[at]isen-ouest.yncrea.fr</p>
+                    <button class="deleteButton">supprimer</button>
                 </section>
             </div>
             <br>
