Bug fixe Publication

--- a/Publications.html
+++ b/Publications.html
@@ -73,27 +73,27 @@
                 </div>
 
                 <ul id="publications-list">
-                    <li class="rouge" class="publication">    
+                    <li class="publication">    
                         <h3><juste_gris>Sébastien Puma , Emmanuel Sander , Matthieu Saumard , Isabelle Barbet , Aurélien Latouche et al.</juste_gris></h3>
                         <p><b>Reconsidering conceptual knowledge : Heterogeneity of its components</b>. <juste_gris><i>Journal of Experimental Child Psychology</i>, 2023, 227, pp.105587. (10.1016/j.jecp.2022.105587)</juste_gris></p>
                     </li>
                     <br>
-                    <li class="bleu" class="publication">
+                    <li class="publication">
                         <h3><juste_gris>Ayoub Karine , Thibault Napoléon , Maher Jridi.</juste_gris></h3>
                         <p><b>Semantic Images Segmentation for autonomous driving using Self-Attention Knowledge Distillation</b>. <juste_gris><i>16TH IEEE INTERNATIONAL CONFERENCE ON SIGNAL IMAGE TECHNOLOGY & INTERNET BASED SYSTEMS</i>, Oct 2022, Dijon, France.</juste_gris></p>
                     </li>
                     <br>
-                    <li class="bleu" class="publication">
+                    <li class="publication">
                         <h3><juste_gris>Salima Bourbia , Ayoub Karine , Aladine Chetouani , Mohammed El Hassouni , Maher Jridi et al.</juste_gris></h3>
                         <p><b>No-reference Point Clouds Quality Assessment using Transformer and Visual Saliency</b>. <juste_gris><i>QoEVMA'22: Proceedings of the 2nd Workshop on Quality of Experience (QoE) in Visual Multimedia Applications, ACM Multimedia, Oct 2022</i>, Lisbon, Portugal.</juste_gris></p>
                     </li>
                     <br>
-                    <li class="rouge" class="publication">
+                    <li class="publication">
                         <h3><juste_gris>Ayoub Karine , Maher Jridi , Rémi Adde , Sébastien Demousselle.</juste_gris></h3>
                         <p><b>CONCEPTION ET DEVELOPPEMENT D’UNE VOITURE AUTONOME</b>. <juste_gris><i>La Revue 3 E. I</i>, 2022</juste_gris></p>
                     </li>
                     <br>
-                    <li class="rouge" class="publication">
+                    <li class="publication">
                         <h3><juste_gris>Sylvain Lefebvre , Maher Jridi.</juste_gris></h3>
                         <p><b>Mutualisation des Ressources IOT par Conteneurisation de Passerelle1</b>. <juste_gris><i>La Revue 3 E. I</i>, 2022, Intelligence Artificielle et Génie Électrique 2ème partie, 109, pp.69.</juste_gris></p>
                     </li>
