Fix mineur redirection github pages

--- a/plateformes_tech.html
+++ b/plateformes_tech.html
@@ -15,9 +15,9 @@
     </head>
 
     <header>
-        <a id="labisenlogo" class="img_acc" onclick="button_click('Accueil.html')"><img src="Images_H/LabISEN.png" href="Accueil.html" alt="LabISEN" id="header-img" width="170px" height="70px"></a>
+        <a id="labisenlogo" class="img_acc" onclick="button_click('accueil.html')"><img src="Images_H/LabISEN.png" href="Accueil.html" alt="LabISEN" id="header-img" width="170px" height="70px"></a>
         <div id="clock">0:0:00</div>
-        <nobr onmouseover="button_hover()"><a class="nav-link" onclick="button_click('Accueil.html')"><span class="material-icons">home</span> Accueil</a></nobr>
+        <nobr onmouseover="button_hover()"><a class="nav-link" onclick="button_click('accueil.html')"><span class="material-icons">home</span> Accueil</a></nobr>
         <nobr onmouseover="button_hover()" id="selected_page">
             <div class="dropdown">
                 <button class="dropbtn">Recherche<span class="material-icons">expand_more</span></button>
