Les membres peuvent maintenant être renommés

--- a/Membres.html
+++ b/Membres.html
@@ -69,6 +69,7 @@
                     </section>
                     <section class="info_box">
                         <h2>Ayoub Karine</h2>
+                        <button class="editNameButton">renommer</button>
                         <p>Enseignant chercheur<br>ISEN Yncréa Ouest -Nantes<br>ayoub.karine[at]isen-ouest.ycnrea.fr</p><br>
                         <hr color="black" width= 50%>
                         <br>
@@ -97,6 +98,7 @@
                     </section>
                     <section>
                         <h2>Maher Jridi</h2>
+                        <button class="editNameButton">renommer</button>
                         <p>Enseignant chercheur, HDR<br>ISEN Yncréa Ouest -Nantes<br>maher.jridi[at]isen-ouest.ycnrea.fr</p><br>
                         <hr color="black" width= 50%>
                         <br>
@@ -127,6 +129,7 @@
             <div class="carte_version_petite">
                 <section>
                     <h2>Sylvain Lefebvre</h2>
+                    <button class="editNameButton">renommer</button>
                     <p>Période :01/2022 au 04/2023<br>Projet : Industrie 4.0<br><br>ISEN Yncréa Ouest –Nantes<br>sylvain.lefebvre[at]isen-ouest.yncrea.fr</p>
                     <button class="deleteButton">supprimer</button>
                 </section>
@@ -138,6 +141,7 @@
             <div class="carte_version_petite">
                 <section>
                     <h2>Salima Bourbia</h2>
+                    <button class="editNameButton">renommer</button>
                     <p>Période :01/2022 au 04/2023<br>Projet : Industrie 4.0<br><br>ISEN Yncréa Ouest –Nantes<br>sylvain.lefebvre[at]isen-ouest.yncrea.fr</p>
                     <button class="deleteButton">supprimer</button>
                 </section>
