--- a/accueil.html
+++ b/accueil.html
@@ -18,7 +18,7 @@
     <header>
         <a id="labisenlogo" class="img_acc" onclick="button_click('accueil.html')"><img src="Images_H/LabISEN.png" alt="LabISEN" id="header-img" width="170px" height="70px"></a>
         <div id="clock">0:0:00</div>
-        <nobr onmouseover="button_hover()"><a class="nav-link" onclick="button_click('accueil.html')"><span class="material-icons">home</span> Accueil</a></nobr>
+        <nobr onmouseover="button_hover()"><a class="nav-link" onclick="button_click('accueil.html')" id="selected_page"><span class="material-icons">home</span> Accueil</a></nobr>
         <nobr onmouseover="button_hover()">
             <div class="dropdown">
                 <button class="dropbtn">Recherche<span class="material-icons">expand_more</span></button>
@@ -32,7 +32,7 @@
         <nobr onmouseover="button_hover()"><a onclick="button_click('Projets.html')"><span class="material-icons">list_alt</span> Projets</a></nobr>
         <nobr onmouseover="button_hover()"><a onclick="button_click('Publications.html')"><span class="material-icons">feed</span> Publication</a></nobr>
         <nobr onmouseover="button_hover()"><a onclick="button_click('Partenaires.html')"><span class="material-icons">handshake</span> Partenaires</a></nobr>   
-        <nobr onmouseover="button_hover()" id="selected_page">
+        <nobr onmouseover="button_hover()">
             <div class="dropdown">
                 <button class="dropbtn">Contact<span class="material-icons">expand_more</span></button>
                 <div class="dropdown-content">
